--- a/web/WEB-INF/views/css/app.css
+++ b/web/WEB-INF/views/css/app.css
@@ -27,6 +27,7 @@ body, .form-control{
   border: 1px solid #ddd;
   border-radius: 4px;
   box-shadow: 0 0 30px black;
+    color: #080808;
 }
 
 .custom-width {
