In computer edit form added "remove an equipment to storage". On the site menu all renamed to russian.

--- a/web/WEB-INF/views/css/style.css
+++ b/web/WEB-INF/views/css/style.css
@@ -56,3 +56,9 @@ nav li{
 form {
     display: inline-block;
 }
+.my_button{
+    display:inline-block;
+    color: #269abc;
+    width: 137px;
+    height: 40px;
+}
