--- a/web/WEB-INF/views/css/style.css
+++ b/web/WEB-INF/views/css/style.css
@@ -1,49 +1,55 @@
-body{
+body {
     /*margin: 0;*/
-    background: url("/images/275.jpg") no-repeat;
+    background: url("/images/276.jpg") no-repeat;
     background-size: cover;
     font-family: 'Work Sans', sans-serif;
     color: aliceblue;
-        /*font-weight: 300;*/
+    /*font-weight: 300;*/
 }
+
 table {
     color: aliceblue;
 }
-.container{
-    width:80%;
-    margin:0 auto;
+
+.container {
+    width: 80%;
+    margin: 0 auto;
 }
 
-header{
-    background:#55d6aa;
+header {
+    background: #55d6aa;
 }
-header::after{
+
+header::after {
     content: ' ';
     display: table;
     clear: both;
 }
-.logo{
+
+.logo {
     float: left;
     margin: 0 -250px;
 
 }
-nav{
+
+nav {
     float: right;
 }
 
-nav ul{
+nav ul {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 
-nav li{
+nav li {
     font-size: 150%;
-    display:inline-block;
+    display: inline-block;
     margin: 0 25px;
-    padding-top:32px;
+    padding-top: 32px;
 }
-.footer{
+
+.footer {
     font-size: large;
     position: fixed;
     left: 0;
@@ -56,9 +62,53 @@ nav li{
 form {
     display: inline-block;
 }
-.my_button{
-    display:inline-block;
+
+.my_button {
+    display: inline-block;
     color: #269abc;
     width: 137px;
     height: 40px;
+}
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+    background: #55d6aa;
+    font-size: 23px;
+}
+
+.dropdown:hover .dropbtn {
+    background-color: #3e8e41;
 }
